# ChangeLog for app-crypt/md6sum
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/md6sum/ChangeLog,v 1.8 2015/01/26 09:43:34 ago Exp $

  26 Jan 2015; Agostino Sarubbo <ago@gentoo.org> md6sum-1.0-r2.ebuild:
  Stable for x86, wrt bug #534828

  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> md6sum-1.0-r2.ebuild:
  Stable for amd64, wrt bug #534828

*md6sum-1.0-r2 (30 Aug 2014)

  30 Aug 2014; Alon Bar-Lev <alonbl@gentoo.org>
  +files/md6sum-1.0-format-security.patch, +md6sum-1.0-r2.ebuild:
  Resolve format-security issue, bug#521000

  19 Nov 2012; Thomas Kahle <tomka@gentoo.org> md6sum-1.0-r1.ebuild:
  marked x86 per bug 441954

  14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> md6sum-1.0-r1.ebuild:
  Stable for amd64, wrt bug #441954

*md6sum-1.0-r1 (08 Nov 2012)

  08 Nov 2012; Dane Smith <c1pher@gentoo.org> -md6sum-1.0.ebuild,
  +md6sum-1.0-r1.ebuild, +files/md6sum-1.0-cflags.patch:
  Revision bump. Add patch to fix CFLAGS respect wrt bug 442066. Drop old.

  05 Nov 2012; Dane Smith <c1pher@gentoo.org> md6sum-1.0.ebuild, metadata.xml:
  Drop hwoarang as maintainer and leave in crypto herd at his request.
  Small ebuild cleanups.

*md6sum-1.0 (28 Mar 2011)

  28 Mar 2011; Markos Chandras <hwoarang@gentoo.org> +md6sum-1.0.ebuild,
  +files/md6sum-1.0-ldflags.patch, +metadata.xml:
  Initial commit of md6sum package. Thanks to AlphatPC@gmail.com for the
  original ebuild. Bug #353379