@@ -5,24 +5,13 @@ AUX md6sum-1.0-cflags.patch 791 SHA256 dfda1d4ef71d3552f269737a9f05c5ed5215083dc
 AUX md6sum-1.0-format-security.patch 620 SHA256 13dec5c113e66d50eefccefbe3caaf67cc2d36923dcfbb61172e6ff6b5594e8f SHA512 b1ec3b1479ce58e9e2aa4a43982b61932d7ed099d1246dd00e7d6f183b1087dda7c446a63ceea06006ee905a167bd3cb7485d208d95a7860768b680670f0fd88 WHIRLPOOL 84074d09048142644ee6f425731b365cc0fe1d692413fa4d9dd202f7b1b2d8721394f4d8ce1cd7ce61585b0b36a679731ebf3603c18b474ad5980e540fb449ca
 AUX md6sum-1.0-ldflags.patch 427 SHA256 699b86db61f451a07a5e1c3f69e51d4e159ec486b26cc547f52996ff7a75c07d SHA512 2ed3dc38eef78f365bd8e03e22264488c6a0d089c30f827e90ca5dd5ada9ad061e0c1a736c3ccc81c05fd172ffc8140034d703993233e5e3f8877cfb298fa1a1 WHIRLPOOL dc24ad00f6e2c9d44a58bad7ad94e6863b71386bbf913f58b3cbf058936ebb57778fb042c34fdef1f8a62184ca0875cf6d99e32327e3e7018431dc9a4c9aaff0
 DIST md6sum-1.0.tar.gz 125626 SHA256 5812286dabf26d576cf9b30d3088da1e7924362442144ecdfa38738530e297e0 SHA512 8253a68dd036dd98b22c39a35a75f9bbdc4018ea63dc8f7823c831090d19f2f92a727458b4dc35388e494dbf496b9f5de693a1cfb3e5a8ca8441f31f0e817d46 WHIRLPOOL 05d3e1c8c5065b8003e620b3824310393ad64c22e94d4e3acc18f508e5a6461ba222c1b53e782616a0bd5372c3cadc7e774b24e9782e8137b1336af5740b0a04
-EBUILD md6sum-1.0-r1.ebuild 619 SHA256 1aa5fca4510b3c8efe8a99619c74636771af95262c0cb9741005c93421126be8 SHA512 c7ea28191f99ddcc838016b28e0bf53df70613db0388e188b30035660adaf42fb84427f4125c0302933851f78d31e60beb6f46b6ac2a2fe66482dfdf6da96e14 WHIRLPOOL 23b1d81afc4be597ae417748c0e0d17ab00ce2603fe1743a2497880fe41ae451b2e3dfcfa7aeb070eb3634eee3cfd99f5da9b72ca6f570962fd157d406ac6377
 EBUILD md6sum-1.0-r2.ebuild 645 SHA256 4094572649d50cbc0e41f698055383ebeb10a0e669fa2a0b24e47a5876895768 SHA512 acadb98989dd8251e4959b5738a2f5c679242cade85153a490d108879e97141634dba74464ca9349f0c686a0ca614cf70ebae7ae1088bd24db001fa06ac32db5 WHIRLPOOL a2b1a646a22922de2a91addf0310ea70202072e6c4499325265efae93988b39c17280fb02341595abd6da3700f3f8e18882d0aefdb38c514b79049c786b91587
-MISC ChangeLog 1470 SHA256 ccbe6afa7e5eca1a495b2d4f56b11047ba92b80dafbd6beb810bfba344981286 SHA512 4bff56cea9b0ae51f15f1070d5e8eab20dc1e2fdc764c6561ec02575e86685b30196c8e80d9a221b4ff4cc5efb0b41d7a23e194214e4fee3cfc69bf24f2e6240 WHIRLPOOL 98c3ace390d54b22a6a419ac29b2e08d2f8e7904ab0ef3bb38620e32d65385ac3a737bdf99e3ec042445c590e199c36b095082bcad2897bdb44afd97cefe5232
+MISC ChangeLog 1555 SHA256 2c5a2f0e4034f908d951aaf0e98727d3a206ff7b70480b11db80a9eed22d854a SHA512 a1d77b82511040dae7243541b6eb542138dece2016c8c7e050548feff6d95a95f799795c436b9b9572ec63f0ff0f4060c2a27134aa02b5f3126d05b37fe7cd0f WHIRLPOOL b1b20118e7a6243499c498d61e9a4b30f5ad9058db85a13a28cce710e402cb4081cbcf0cf6e276a0b3e75ebac08525fc116a9ad076e186fb0104785e8b6f047e
 MISC metadata.xml 207 SHA256 6745cbbb6d58bc999a7a6cebd62410e7f43d5b5bbecb7673ea736cddbd658c10 SHA512 8c12b6d54a6d4d371ff223de910b1e9aad0ea5265c93beb3adfa31521ad4ffc5a120332f110c28091f1fe0c415e35089539eb4357111166fd0cf378f4be20e2a WHIRLPOOL 00b0bdc90274151e062d937a0fe6a409e8acf900d1b04036a239f9224a99ef1e984d6b9d3fa59629f2110ebd3d05b1ba38fdfdc93f4d0f70509598a80774975b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUxgxHAAoJELp701BxlEWfQBAQAKhzLE9Fz+yYyc273OY5sBgT
-OP+kfuumyOc5asZvMQ3ARzwpi9xBXNO85JLnWj5aLeyNBwdQScEaOjtfmoUiUnrA
-G9qi4WviUrpn5O/oqp0Px1iBRUCeBOSHQUNkNENc8V8m0G8ODimrMLiLZs0V7f0a
-ZkqFQeDhy7VtSjgQxRwKhiEyhGlH4nufGJxunflmBFrn5E7Tj4BF0pSrzZQDssIk
-PfjJxTfZPKzN3phgk6+296be6dIZ1yQPeXZyCzc/JmFXBKnG860v7SF9X9g8B8Q+
-2mWDbty/QM4n+rjC4wtMZ96hxR6tHABIpPRNlvIjcihTN7nxDeo7fvbuFJ5vusVx
-bd+lIbPHw+EYCYKkkOwB55dTt2o57PsMJSCzGm174SLMu70y0pACP2QflBiztU0V
-nK71D8u4WHL9z7ZYL+MrsrF92fMRpdFFQ4Tm6sbh4IlPl+ePqJXLR9qWfkwtCq+I
-HDuyTOEVzqA9I8WwhmWwBcOn3B3VwWIPwk9fPH41Lm2+RFtA22u1TONaF0VLMXxL
-33vnuC3NFzfxzr5GVbXw/gso567WkRJZyRHchvuvghO7LZXJKpCBv36dWJvasD+9
-/kEnMKZeT2AP8vKGWsl5g7R5s9Vo7JsnxcE6mirEt4P7irgmKnH+s2JJWTZ843FT
-mLDUT/oh8NnRtSYqBjqv
-=2ZxZ
+iF4EAREIAAYFAlTGDOYACgkQXYk9GL8g3FF0agD/fYQN3cY2fLEg+42FAPS8IBkb
+zoSWJdT+J+sNy/FiwqgA/i+5vgdf7MZav3kJGOj7uSEYKscBq6DqDxhFip/EM4ig
+=+a3a
 -----END PGP SIGNATURE-----
