@@ -5,24 +5,13 @@ AUX tinyca-2.0.7.3-compositefix.patch 324 SHA256 d69a311312c46d9b3a0db9464f73d3c
 AUX tinyca-2.0.7.5-openssl-1.patch 1473 SHA256 47e0944ad8b8f01fa9f74b5b91d68c1afb90c19df173d28d117843f0815f7135 SHA512 62f6368d8759f83b33aa8d19cbd0b816bc2be35a1b1f798b211269a5b0279788edd01f7f4bdf20d453dafc71df250c72adbd9ac5dba276ac1b4f0690fa80c60a WHIRLPOOL 567f9793fd606faef9c86e05b55e9a606a5e5b8415602e212cbccc6f70192256a08b432f70dc296044054ad2a844418e52dc46e26407a89b6525ceb849afebea
 AUX tinyca-2.0.7.5-perl-5.18.patch 1743 SHA256 72157afe6876d861763357fcd2845fee2ab94e7b280ea8d4b4e7dd7d92b189e4 SHA512 8d31c6fc3df702f03365352a4de3ee91efd5f4c2b002e9a29827a943f90fcbfefa67518df6e1ce1cb064ad1b44d575ae105013e30babdd723521a9950602a0dc WHIRLPOOL 7dc95dd5b42a6937e8eb260a440f157285f016dfa8bfa785f00da78521adef2a18ffa62ec3417c5a0681638d0ddd0d2b51794675b999ca14e2ddf818330f7f1c
 DIST tinyca2-0.7.5.tar.bz2 172779 SHA256 dc7d8180bf1db572fa4b08e15ecf8a47fc1c5bfdb55109bf2b3a54f86e5e60b7 SHA512 47df0b995715ad973b12da7d2999ae90f8887549437235b287e1d294331adc8d527bf4435ce1c30df278db8e5f8fc7df29a35d3650d41bfd4d0a0a7c193994aa WHIRLPOOL 5f990529ee503f07d8df0132c1b5834b8353d4908650535adb67ba82f04b1472559dca40ee972e4ce6ac22f31706774c981fc8fc905964df4b837ba6bec1a9be
-EBUILD tinyca-2.0.7.5-r1.ebuild 1611 SHA256 e4431fbb13432c3f2d432feb8998d42e220bc3d05653e529cd3526587be514e2 SHA512 4f589d2db2be666480b83a5acfb8012114c4eea0f034fbeff2d3988baebc87e059388e9c4a1f3212415c7f6dfc75f1dfc4f732928a22f63034a473136e002d53 WHIRLPOOL b405196ff5232481c4aa047abce8aa537d1c3fcbb6918c89842bef9ca03d879c0069b6aa327e99552216ca7380d066b0e46b5e22c3b488fd7e873f27903786e6
 EBUILD tinyca-2.0.7.5-r2.ebuild 1632 SHA256 8df9a1724d2625fa5857d06cb243b12b6b1a490f24879be06df1371dc2cb57b1 SHA512 343f79be086586ba33ae6bf82e24bcb16b974131e901d1141431d67ccce24122fdba8b33306be2ea1c4ed1e6cd0828afddd96f70528f86e23636d31c46fd8ebf WHIRLPOOL 20ae3d2fa28390dfc75469fa37ae32c192c3c08dcc03448e1533dc49d822699c8fa517300c0abdea00613b34b91d90feb23a5592d0329ea677546fb8e6908a94
-MISC ChangeLog 2174 SHA256 3dcfd1d5c8f19cd43fccceb66a22d1fc02d4f3126c8ea518d22c61f5e6a0d66b SHA512 86dde50d695aa937d6ffb7d22c0ea31c05905560a506be6b681084525eed402db63e5911722ab819297e472722fa983ccd71fef7c7cb9f2c50cd31abcb8bb111 WHIRLPOOL f2827b20417c17fd4b1cb5b73eef84ba809be162ea160bc5cad5790c83788ca9380674060f7093c7eef9da747cbcc676697dbb7052988644a0bc62194b03405e
+MISC ChangeLog 2263 SHA256 eb8aab8cfbbf0f91e0729a9de7dbaa3a20b65072d823a5fa3ab2a6649e3e8fad SHA512 b8e78585c3a778665a2845d4e4f237b4c7433b67801099d066726dc3c752a90786828ea08d2413198fb3a20b5c04cfb64ef6f4eb58abc0f508d94f0c6e90b249 WHIRLPOOL dae80c5b7ad2fceac3803b16f4d6474466aa6d2e3f1133efcac9e343a3dae426237d30691629984cde25b98403ee0db8acaef6e22cb144fc92f852fd97ee555a
 MISC metadata.xml 159 SHA256 fabd15e2740a2a68e0bda738d0cd4300b133ff11239802afe7e60aa3862c9c03 SHA512 96a1f7f082adc57e52a1a32666e1206e68f8ff03c728fdb7666ff98c255905977491fc4dfc37bc8bdf5da0eb50cdc408adec357bbd75bd980bc90659cc157194 WHIRLPOOL 82fca1c4b75b090abdb0a4233c8e49fc43535ca6e470f725c1872653ea922b6693e9646bc3ee1fd6f1293ebedad661642cec13b2817fb5315268300f7675a751
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUxgxZAAoJELp701BxlEWfeCcQAKcyoIV2FV6rTYq7Qnrftv8O
-6Ld6M2um30mR+c5fIW3JEpvXALQX2/NZho6yLd5H0fDV7CHRX9V8F8XOnOk9fq0x
-RD7SpjtvCiffKLwQZ7VC5hmvsreCR8TAzxNjRlNbS8I7cWILaHy7U/AA5dO5oLuQ
-mEQOBG4PWOjQ5ltpx9o4dHHHn5MCN+/VE5tJvh0kd3u8f5+MWmQGoOJBAmBW0OkT
-QLkgAVSdwffggKV/HVeXwjylBbjx+L32vemsLve0tAoWD/JkJjn0MsNfJiiYo/cW
-OcI+vZpzFHiXcrBpJRzTvkMceeCN+RND6Qq1xabz16IoKDUDSUnbroeC9kE76BNm
-IhIYfdwwSLw3aCHTXUAtb0eDWMLZB8nOVRqgSV/BK5eXzv7pHb4QfqPXfAlPAcrt
-xs6sdMaAzFoK4AhfcZHDiBQYVgjEbSz22DUrmxNmO54p7okc9CUVjT2xbUyGEG5O
-AMKWgIfRgjyjzvLtGlyQrGqkeBnDMGXZOE6Hqqt06EIlFDJmiryFdWcCm1DxZt05
-xyEv6jrmwOsmLujuvqF3/t+yK5JFfdjpKn2q1+CRHGjShqxh4GSSYZbq4FH+k975
-OdUQX7xWn7Wt9NhKX6EaA7T+kDRsRLbgsMU8o/6IK+JAHxVbB61eQZWg/dKGZqfz
-QeGnrjUCRW2RiWfMqOP/
-=AcfN
+iF4EAREIAAYFAlTGDScACgkQXYk9GL8g3FHLygEAo5GsVWOSQgMfk1+9/lRNtvuW
+LjfWg3LOL0COaJwQs6gBAJ6QuMBGGY2J8j+vngU6Z3eoCAIwhMV7hA3A9cof9GOQ
+=d1E9
 -----END PGP SIGNATURE-----
