@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/md6sum
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/md6sum/ChangeLog,v 1.8 2015/01/26 09:43:34 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/md6sum/ChangeLog,v 1.9 2015/01/26 09:46:11 alonbl Exp $
+
+  26 Jan 2015; Alon Bar-Lev <alonbl@gentoo.org> -md6sum-1.0-r1.ebuild:
+  Cleanup
 
   26 Jan 2015; Agostino Sarubbo <ago@gentoo.org> md6sum-1.0-r2.ebuild:
   Stable for x86, wrt bug #534828
